--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@teachablemachine/image": "^0.8.5",
+    "@tensorflow/tfjs": "^4.18.0",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "crypto-browserify": "^3.12.0",
