--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "@teachablemachine/image": "^0.8.5",
-    "@tensorflow/tfjs": "^1.3.1",
+    "@tensorflow/tfjs": "^4.18.0",
     "axios": "^1.6.8",
     "core-js": "^3.8.3",
     "crypto-browserify": "^3.12.0",
@@ -31,5 +32,10 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3"
-  }
+  },
+  "description": "## Project setup ``` npm install ```",
+  "main": ".eslintrc.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
