--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "start": "node server.js"
+    "start": "vue-cli-service serve"
   },
   "dependencies": {
     "@teachablemachine/image": "^0.8.5",
