--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@teachablemachine/image": "^0.8.5",
     "@tensorflow/tfjs": "^4.18.0",
     "axios": "^1.6.8",
+    "boostrap": "^2.0.0",
     "core-js": "^3.8.3",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
