--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tensorflow/tfjs": "^4.18.0",
     "axios": "^1.6.8",
     "boostrap": "^2.0.0",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
