--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "vue": "^3.2.13",
-    "vue-router": "^4.0.3"
+    "vue-router": "^4.0.3",
+    "vue-toast-notification": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
