--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
     "vue": "^3.2.13",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.0.3",
     "vue-toast-notification": "^3.1.2"
   },
