--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "crypto-browserify": "^3.12.0",
     "dotenv": "^16.4.5",
     "firebase": "^10.11.1",
+    "js-cookie": "^3.0.5",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
