--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
     "stream-browserify": "^3.0.0",
+    "swiper": "^11.1.1",
     "vue": "^3.2.13",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.0.3",
